[package]
name = "astrobwt"
version = "0.1.0"
authors = ["Slixe <slixeprivate@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.9.1"
rand = "0.8.4"
xxhash-rust = { version = "0.8.5", features = ["xxh64"] }